PROD-2254 #comment Updated css to correctly align the list numbering #time 15m

--- a/src/shared/components/challenge-detail/Specification/styles.scss
+++ b/src/shared/components/challenge-detail/Specification/styles.scss
@@ -351,7 +351,6 @@ $tc-link-visited: #0c4e98;
         white-space: normal;
 
         &::before {
-          display: table-cell;
           font-weight: 700;
           text-align: right;
           content: counter(item) ".";
